--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Instagram - Powered by Satellizer</title>
+    <title>Orlagram - Conor Clone</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/paper/bootstrap.min.css">
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-    <!--<link rel="stylesheet" href="css/styles.css">-->
+
     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- To start server use <python -m SimpleHTTPServer> make sure you are in current directory-->
 </head>
 <body>
 
@@ -30,6 +32,10 @@
 <script src="vendor/angular-route.js"></script>
 <script src="vendor/angular-messages.js"></script>
 <script src="app.js"></script>
-
+<script src="controllers/home.js"></script>
+<script src="controllers/detail.js"></script>
+<script src="controllers/login.js"></script>
+<script src="controllers/navbar.js"></script>
+<script src="controllers/signup.js"></script>
 </body>
 </html>
